--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.11.16",
 		"@mui/material": "^5.13.1",
 		"@supabase/supabase-js": "^2.22.0",
 		"formik": "^2.2.9",
