--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.11.2",
 		"sass": "^1.62.1",
-		"yup": "^1.1.1"
+		"yup": "^1.1.1",
+		"newrelic": "10.1.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
